Fixed css to be more readable

--- a/app/view/css/add_style.css
+++ b/app/view/css/add_style.css
@@ -1,8 +1,11 @@
-body { 	margin:0px;padding:0px;	}
+body {
+	margin:0;
+	padding:0;
+}
 td {
 	text-align: left;
 	vertical-align: top;
-	font-family:Tahoma;
+	font-family:Tahoma, sans-serif;
 	font-size:11px;
 	color:#737C83;
 	line-height:13px;
@@ -16,13 +19,17 @@ a {
 a:hover {text-decoration:underline;}
 
 .copy {
-	font-family:Tahoma;
+	font-family: Tahoma, sans-serif;
 	font-size:10px;
 	color:#717171;
 	text-decoration:none;
 }
 
-.bot_txt {color:#2D75A4; font-size:9px; font-weight:bold}
+.bot_txt {
+	color:#2D75A4;
+	font-size:9px;
+	font-weight:bold
+}
 
 .gray {color:#737C83;}
 .blue {color:#2D75A4}
@@ -32,43 +39,111 @@ a:hover {text-decoration:underline;}
 .normal {font-size:12px}
 
 .menu_bg1 {
-	background-position: right center; 
-	background-repeat: norepeat;
-	background-image: url(./../images/m1r.jpg);
+	background: url('{{config.directory}}/images/m1r.jpg') no-repeat right center;
 }
 
-.menu_bg1 A:link, .menu_bg1 A:active, .menu_bg1 A:visited, .menu_bg1 A:hover {COLOR: #8A8A8A; FONT-SIZE: 12px; FONT-FAMILY: Verdana, Helvetica; font-weight:bold; TEXT-DECORATION: none}
+.menu_bg1 A:link, .menu_bg1 A:active, .menu_bg1 A:visited, .menu_bg1 A:hover {
+    COLOR: #8A8A8A;
+    FONT-SIZE: 12px;
+    font-family: Verdana, Helvetica, sans-serif;
+    font-weight:bold;
+    TEXT-DECORATION: none
+}
 
 .menu_bg2 {
-	background-position: right center; 
-	background-repeat: norepeat;
-	background-image: url(./../images/m2r.jpg);
+	background: url('{{config.directory}}/images/m2r.jpg') no-repeat right center;
 }
 
-.menu_bg2 A:link, .menu_bg2 A:active, .menu_bg2 A:visited, .menu_bg2 A:hover {COLOR: #353859; FONT-SIZE: 12px; FONT-FAMILY: Verdana, Helvetica; font-weight:bold; TEXT-DECORATION: none}
+.menu_bg2 A:link, .menu_bg2 A:active, .menu_bg2 A:visited, .menu_bg2 A:hover {
+    color: #353859;
+    font-size: 12px;
+    font-family: Verdana, Helvetica, sans-serif;
+    font-weight:bold;
+    text-decoration: none
+}
 
 #under{text-decoration:underline;}
 
-INPUT 		{BORDER-TOP-COLOR: #000000; BORDER-LEFT-COLOR: #000000; BORDER-RIGHT-COLOR: #000000; BORDER-BOTTOM-COLOR: #000000; BORDER-TOP-WIDTH: 1px; BORDER-LEFT-WIDTH: 1px; FONT-SIZE: 11px; BORDER-BOTTOM-WIDTH: 1px; FONT-FAMILY: Verdana,Helvetica; BORDER-RIGHT-WIDTH: 1px}
-TEXTAREA	{BORDER-TOP-COLOR: #000000; BORDER-LEFT-COLOR: #000000; BORDER-RIGHT-COLOR: #000000; BORDER-BOTTOM-COLOR: #000000; BORDER-TOP-WIDTH: 1px; BORDER-LEFT-WIDTH: 1px; FONT-SIZE: 11px; BORDER-BOTTOM-WIDTH: 1px; FONT-FAMILY: Verdana,Helvetica; BORDER-RIGHT-WIDTH: 1px}
-SELECT 		{BORDER-TOP-COLOR: #000000; BORDER-LEFT-COLOR: #000000; BORDER-RIGHT-COLOR: #000000; BORDER-BOTTOM-COLOR: #000000; BORDER-TOP-WIDTH: 1px; BORDER-LEFT-WIDTH: 1px; FONT-SIZE: 11px; BORDER-BOTTOM-WIDTH: 1px; FONT-FAMILY: Verdana,Helvetica; BORDER-RIGHT-WIDTH: 1px}
-FORM 		{FONT-FAMILY: Verdana,Helvetica; FONT-SIZE: 11px}
+input, textarea, select{
+    border: 1px solid #000000;
+    font-size: 11px;
+    font-family: Verdana,Helvetica, sans-serif;
+}
+form{
+    font-family: Verdana,Helvetica, sans-serif;
+    font-size: 11px
+}
 
 
 
-.area_title 	{BACKGROUND: none; COLOR:  #212121; FONT-SIZE: 16px; FONT-WEIGHT: bold; FONT-FAMILY: Tahoma, Verdana, Helvetica; TEXT-DECORATION: none; margin: 18 0 12 0; text-align: center;}
-.area_subtitle 	{BACKGROUND: none; COLOR: #636363; FONT-SIZE: 14px; FONT-WEIGHT: bold; FONT-FAMILY: Tahoma, Verdana, Helvetica; TEXT-DECORATION: none; margin: 12 0 6 0; text-align: center;}
-.area_div_name 	{BACKGROUND: none; COLOR: #6A6A6A; FONT-SIZE: 14px; FONT-WEIGHT: bold; FONT-FAMILY: Tahoma, Verdana, Helvetica; TEXT-DECORATION: none; margin: 6 0 3 0; text-align: justify; text-indent: 0;}
-.area_subdiv_name 	{BACKGROUND: none; COLOR: #6A6A6A; FONT-SIZE: 12px; FONT-WEIGHT: bold; FONT-FAMILY: Tahoma, Verdana, Helvetica; TEXT-DECORATION: none; margin: 6 0 3 0; text-align: justify; text-indent: 0;}
-.area_text {BACKGROUND: none; COLOR: #6A6A6A; FONT-SIZE: 12px; FONT-WEIGHT: normal; FONT-FAMILY: Tahoma, Verdana, Helvetica; TEXT-DECORATION: none; margin: 6 0 6 0; text-align: justify; text-indent: 20;}
-.area_text_simple {BACKGROUND: none; COLOR: #6A6A6A; FONT-SIZE: 12px; FONT-WEIGHT: normal; FONT-FAMILY: Tahoma, Verdana, Helvetica; TEXT-DECORATION: none; margin: 6 0 6 0;}
-.area_small_text 	{BACKGROUND: none; COLOR: #6A6A6A; FONT-SIZE: 9px; FONT-WEIGHT: normal; FONT-FAMILY: Tahoma, Verdana, Helvetica; TEXT-DECORATION: none; margin: 4 0 4 20; text-align: justify; text-indent: -20;}
-.area_nuneric1 {BACKGROUND: none; COLOR: #6A6A6A; FONT-SIZE: 12px; FONT-WEIGHT: normal; FONT-FAMILY: Tahoma, Verdana, Helvetica; TEXT-DECORATION: none; margin: 6 0 6 20; text-align: justify; text-align: justify; text-indent: -20;}
-.area_nuneric2 {BACKGROUND: none; COLOR: #6A6A6A; FONT-SIZE: 12px; FONT-WEIGHT: normal; FONT-FAMILY: Tahoma, Verdana, Helvetica; TEXT-DECORATION: none; margin: 4 0 4 40; text-align: justify; text-align: justify; text-indent: -20;}
-.area_nuneric3 {BACKGROUND: none; COLOR: #6A6A6A; FONT-SIZE: 12px; FONT-WEIGHT: normal; FONT-FAMILY: Tahoma, Verdana, Helvetica; TEXT-DECORATION: none; margin: 2 0 2 60; text-align: justify; text-align: justify; text-indent: -20;}
-.area_enumeration {BACKGROUND: none; COLOR: #6A6A6A; FONT-SIZE: 12px; FONT-WEIGHT: normal; FONT-FAMILY: Tahoma, Verdana, Helvetica; TEXT-DECORATION: none; none; margin: 2 0 2 20; text-align: justify;}
-
-
-.content 		{BACKGROUND: none; COLOR: #00008B; FONT-SIZE: 12px; FONT-FAMILY: Tahoma, Verdana, Helvetica}
+.area_title, .area_subtitle {
+    background: none;
+    color:  #212121;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: Tahoma, Verdana, Helvetica, sans-serif;
+    text-decoration: none;
+    margin: 18px 0 12px 0;
+    text-align: center;
+}
+.area_subtitle{
+    margin: 12px 0 6px 0;
+    color: #636363;
+    font-size: 14px;
+}
+.area_div_name, .area_subdiv_name,.area_text 	{
+    BACKGROUND: none;
+    COLOR: #6A6A6A;
+    FONT-SIZE: 14px;
+    FONT-WEIGHT: bold;
+    FONT-FAMILY: Tahoma, Verdana, Helvetica, sans-serif;
+    TEXT-DECORATION: none;
+    margin: 6px 0 3px 0;
+    text-align: justify;
+    text-indent: 0;
+}
+.area_subdiv_name, .area_text, .area_text_simple{
+    FONT-SIZE: 12px;
+}
+.area_text{
+    text-indent: 20px;
+}
+.area_text, .area_text_simple{
+    font-weight: normal;
+    margin: 6px 0 6px 0;
+}
+.area_small_text, .area_nuneric1, .area_nuneric2, ..area_nuneric3, .area_enumeration{
+    background: none;
+    color: #6A6A6A;
+    font-size: 12px;
+    font-weight: normal;
+    font-family: Tahoma, Verdana, Helvetica, sans-serif;
+    text-decoration: none;
+}
+.area_small_text{
+    FONT-SIZE: 9px;
+    FONT-WEIGHT: normal;
+    font-family: Tahoma, Verdana, Helvetica, sans-serif;
+    TEXT-DECORATION: none;
+    margin: 4px 0 4px 20px;
+    text-align: justify;
+    text-indent: -20px;
+}
+.area_nuneric1, .area_nuneric2, .area_nuneric3{
+    text-align: justify;
+    text-indent: -20px;
+}
+.area_nuneric1 {
+    margin: 6px 0 6px 20px;
+}
+.area_nuneric2 {margin: 4px 0 4px 40px;}
+.area_nuneric3 {margin: 2px 0 2px 60px;}
+.area_enumeration {margin: 2px 0 2px 20px; text-align: justify;}
+.content{
+    background: none;
+    color: #00008B;
+    font-size: 12px;
+    font-family: Tahoma, Verdana, Helvetica, sans-serif;
+}
 
 
